--- a/code/java/materials/Java/day15/code/echarts/echart/map_js.html
+++ b/code/java/materials/Java/day15/code/echarts/echart/map_js.html
@@ -7,9 +7,9 @@
     <script src="echarts.js"></script>
     <script src="china.js"></script>
 </head>
-<body>
+<body style="height:100vh">
 <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-<div id="main" style="width: 600px;height:400px;"></div>
+<div id="main" style="width: 100%;height:100%;"></div>
 <script type="text/javascript">
     // 基于准备好的dom，初始化echarts实例
     var myChart = echarts.init(document.getElementById('main'));
@@ -488,6 +488,10 @@
 
 //     使用刚指定的配置项和数据显示图表。
     myChart.setOption(option);
+	
+	window.addEventListener("resize", function () {
+    myChart.resize();
+});
 </script>
 </body>
 </html>
